# irun

./: .pre-commit-config.yaml  README.md  setup.cfg  setup.py
.github/workflows/: test.yml
irun/: base.py  compiler.py  parser.py  preprocessor.py  run.py
samples/: for_else.irun  general.irun  test.irun
tests/: runner.py
tests/cases/: basic.irun
