[metadata]
name = irun
version = 0.2
description = High level query language for Reiz
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/reizio/irun
author = isidentical
author_email = isidentical@gmail.com
license_file = LICENSE.txt
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8

[options]
packages = find:
python_requires = >=3.8
